force-app/main/default/objects/Presales_Engineer_Activity__c/Presales_Engineer_Activity__c.object-meta.xml
<CustomObject>
    <label>Solution Consulting Activities</label>
    <nameField>
        <displayFormat>PSE-{0000}</displayFormat>
        <label>Activity Number</label>
        
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Consulting Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>