force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Account__c.field-meta.xml
<CustomField>
    <fullName>PSE_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account used for Presales Engineer Tracker for activity tracking</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Enterprise</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Presales_Engineer_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>