force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Activity_Category__c.field-meta.xml
<CustomField>
    <fullName>PSE_Activity_Category__c</fullName>
    <description>Activity Category used for Presales Engineer Tracker for activity tracking</description>
    <inlineHelpText>Customer Specific= NCR Activity; Customer-Multiple = NCR Activity; Non-Customer = Personal Activity</inlineHelpText>
    <label>Activity Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer-Specific</fullName>
            </value>
            <value>
                <fullName>Customer-Multiple</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Non-Customer</fullName>
                <isActive>false</isActive>
                <label>Non-Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>