force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>PSE_Activity_Description__c</fullName>
    <label>Activity Description</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>PSE_Activity_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Analysis/Collateral</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>CEC Visit</fullName>
            </value>
            <value>
                <fullName>Conferences/Events/Roadshows</fullName>
                <label>Conferences/Events</label>
            </value>
            <value>
                <fullName>Data Assessment</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Demo Setup</fullName>
            </value>
            <value>
                <fullName>Early stage presale</fullName>
            </value>
            <value>
                <fullName>Expenses</fullName>
            </value>
            <value>
                <fullName>Gap Resolution</fullName>
            </value>
            <value>
                <fullName>General Sales Support</fullName>
            </value>
            <value>
                <fullName>Instant APP&apos; preparation</fullName>
            </value>
            <value>
                <fullName>Internal Meetings(Team, Leadership, OCR)</fullName>
            </value>
            <value>
                <fullName>IT Issues</fullName>
            </value>
            <value>
                <fullName>Lead Qualification</fullName>
            </value>
            <value>
                <fullName>Marketing support</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Meeting Preparation</fullName>
            </value>
            <value>
                <fullName>Meetings (OCR, CAP, SRT, E2E, Product)</fullName>
            </value>
            <value>
                <fullName>New Product  Version Setup</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>POC Delivery</fullName>
            </value>
            <value>
                <fullName>POC Development</fullName>
            </value>
            <value>
                <fullName>Product design</fullName>
            </value>
            <value>
                <fullName>Problem Management</fullName>
            </value>
            <value>
                <fullName>Product Setup</fullName>
            </value>
            <value>
                <fullName>Product UI design</fullName>
            </value>
            <value>
                <fullName>Production Deployment</fullName>
            </value>
            <value>
                <fullName>Profitability Study</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>