force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Activity_Hours_YTD__c.field-meta.xml
<CustomField>
    <fullName>PSE_Activity_Hours_YTD__c</fullName>
    <inlineHelpText>Hours you have work since start date to today</inlineHelpText>
    <label>Activity Hours YTD</label>
    <precision>18</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>