force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Current_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>PSE_Current_Status_Comments__c</fullName>
    <label>Current Status/Comments</label>
    <type>TextArea</type>
</CustomField>