force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PSE_End_Date__c</fullName>
    <description>End Date used for Presales Engineer Tracker for activity tracking</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>