force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Estimated_Remaining_Hours__c.field-meta.xml
<CustomField>
    <fullName>PSE_Estimated_Remaining_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Additional hours needed to complete this project. If none please enter 0</inlineHelpText>
    <label>Additional Hours</label>
    <precision>17</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>