force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Expected_Book_Date__c.field-meta.xml
<CustomField>
    <fullName>PSE_Expected_Book_Date__c</fullName>
    <formula>PSE_Opportunity__r.EBD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Book Date</label>
    <type>Date</type>
</CustomField>