force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_HW_Products__c.field-meta.xml
<CustomField>
    <fullName>PSE_HW_Products__c</fullName>
    <formula>PSE_Opportunity__r.Hardware_Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HW-Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>