force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Is_Multiple_Customers__c.field-meta.xml
<CustomField>
    <fullName>PSE_Is_Multiple_Customers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If “Customer-Multiple”  is selected in the Account Category field or “Multiple Customer Checkbox is checked</description>
    <inlineHelpText>Select if multiple customers are associated to this activity</inlineHelpText>
    <label>Is Multiple Customers</label>
    <trackHistory>false</trueHistory>
    <type>Checkbox</type>
</CustomField>