force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_IsActive__c.field-meta.xml
<CustomField>
    <fullName>PSE_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active status is used for Presales Engineer Tracker for activity tracking</description>
    <inlineHelpText>For ongoing Customer Activities select &quot;Active&quot;  Otherwise enter an &quot;End Date&quot;.</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>