force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>PSE_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related opportunity for Presales Engineer Activity</description>
    <label>Opportunity</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.PSE_Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Presales_Engineer_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>