force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>PSE_Opportunity_Amount__c</fullName>
    <formula>PSE_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>