force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Opportunity_Number_Not_Yet_Created__c.field-meta.xml
<CustomField>
    <fullName>PSE_Opportunity_Number_Not_Yet_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkbox if Account Manager has not yet created created an opportunity</inlineHelpText>
    <label>Opportunity Number Not Yet Created</label>
    <type>Checkbox</type>
</CustomField>