force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Opportunity_Selling_Stage__c.field-meta.xml
<CustomField>
    <fullName>PSE_Opportunity_Selling_Stage__c</fullName>
    <formula>TEXT (PSE_Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Selling Stage</label>
    <type>Text</type>
</CustomField>