force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Region__c.field-meta.xml
<CustomField>
    <fullName>PSE_Region__c</fullName>
    <description>PSE Activity customer region</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PSE_Activity_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>NAMER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>