force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Solution_Product_Supported__c.field-meta.xml
<CustomField>
    <fullName>PSE_Solution_Product_Supported__c</fullName>
    <description>Solution/Product Supported for Presales Engineer Activity Tracker.</description>
    <label>Solution/Product Supported</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>PSE_Activity_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AANDC</fullName>
            </value>
            <value>
                <fullName>Activate</fullName>
            </value>
            <value>
                <fullName>Activate Enterprise</fullName>
            </value>
            <value>
                <fullName>ATM As a Service</fullName>
            </value>
            <value>
                <fullName>ATM Marketing</fullName>
            </value>
            <value>
                <fullName>Authentic</fullName>
            </value>
            <value>
                <fullName>Branch Transformation</fullName>
                <label>Branch transformation</label>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Channel Services Platform - CSP</fullName>
            </value>
            <value>
                <fullName>D3 - Business Banking</fullName>
            </value>
            <value>
                <fullName>D3 - Online/Mobile Banking</fullName>
            </value>
            <value>
                <fullName>DI - Business Banking</fullName>
            </value>
            <value>
                <fullName>DI - Online/Mobile Banking</fullName>
            </value>
            <value>
                <fullName>Digital Connected Services</fullName>
            </value>
            <value>
                <fullName>Fractals</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Inetco</fullName>
            </value>
            <value>
                <fullName>NCR TH</fullName>
            </value>
            <value>
                <fullName>NDC Enterprise</fullName>
            </value>
            <value>
                <fullName>PS Assets</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Teller-X</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>XFS Platform</fullName>
            </value>
            <value>
                <fullName>New Innovations</fullName>
            </value>
            <value>
                <fullName>CxMarketing</fullName>
            </value>
            <value>
                <fullName>Interactive Teller / Teller-X</fullName>
            </value>
            <value>
                <fullName>Security Solutions - HDE / RBU / Solidcore</fullName>
            </value>
            <value>
                <fullName>Switching - Authentic</fullName>
            </value>
            <value>
                <fullName>Terminal Handling - Authentic / CxTH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>