force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PSE_Start_Date__c</fullName>
    <description>Start Date used for Presales Engineer Tracker for activity tracking</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>