force-app/main/default/objects/Presales_Engineer_Activity__c/fields/PSE_Total_Activity_Hours__c.field-meta.xml
<CustomField>
    <fullName>PSE_Total_Activity_Hours__c</fullName>
    <formula>PSE_Activity_Hours_YTD__c + PSE_Estimated_Remaining_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Activity Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>