force-app/main/default/objects/Presales_Engineer_Activity__c/validationRules/ActivityCat_Customer_Specific_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>ActivityCat_Customer_Specific_Error</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(PSE_Activity_Category__c,&apos;Customer-Specific&apos;),PSE_Account__c=&quot;&quot;, PSE_Opportunity_Number_Not_Yet_Created__c = True)</errorConditionFormula>
    <errorDisplayField>PSE_Account__c</errorDisplayField>
    <errorMessage>Please enter Account</errorMessage>
</ValidationRule>