force-app/main/default/objects/Presales_Engineer_Activity__c/validationRules/End_Date_cannot_be_before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_cannot_be_before_Start_Date</fullName>
    <active>true</active>
    <description>End date cannot be before start date</description>
    <errorConditionFormula>PSE_Start_Date__c  &gt;  PSE_End_Date__c</errorConditionFormula>
    <errorDisplayField>PSE_End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot occur before the Start Date. Please update your End Date accordingly.</errorMessage>
</ValidationRule>