force-app/main/default/objects/Presales_Engineer_Activity__c/listViews/My_Activity.listView-meta.xml
<ListView>
    <fullName>My_Activity</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>PSE_Account__c</columns>
    <columns>Associated_Accounts__c</columns>
    <columns>PSE_Activity_Description__c</columns>
    <columns>PSE_Solution_Product_Supported__c</columns>
    <columns>PSE_Start_Date__c</columns>
    <columns>PSE_End_Date__c</columns>
    <columns>PSE_IsActive__c</columns>
    <columns>PSE_Activity_Hours_YTD__c</columns>
    <columns>PSE_Estimated_Remaining_Hours__c</columns>
    <columns>PSE_Total_Activity_Hours__c</columns>
    <columns>PSE_Current_Status_Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>*My Activity - Current Year</label>
</ListView>